RESOLVED FIXED34397
Screen.availLeft should be signed
https://bugs.webkit.org/show_bug.cgi?id=34397
Summary Screen.availLeft should be signed
Simon Fraser (smfr)
Reported 2010-01-31 11:21:19 PST
Screen.availLeft and Screen.availTop should be unsigned, since they can be negative for screens to the left of/above the primary screen.
Attachments
Patch (3.90 KB, patch)
2010-10-08 12:28 PDT, Simon Fraser (smfr)
no flags
Patch (4.15 KB, patch)
2010-10-08 13:21 PDT, Simon Fraser (smfr)
ap: review+
Simon Fraser (smfr)
Comment 1 2010-01-31 12:37:42 PST
Screen.availLeft and Screen.availTop should be *signed*
Simon Fraser (smfr)
Comment 2 2010-10-08 12:28:34 PDT
Alexey Proskuryakov
Comment 3 2010-10-08 13:16:44 PDT
Comment on attachment 70275 [details] Patch +int Screen::availLeft() const { if (!m_frame) return 0; return static_cast<unsigned>(screenAvailableRect(m_frame->view()).x()); Why cast to unsigned?
Simon Fraser (smfr)
Comment 4 2010-10-08 13:21:44 PDT
Simon Fraser (smfr)
Comment 5 2010-10-08 13:22:00 PDT
Fixed the casts.
Alexey Proskuryakov
Comment 6 2010-10-08 13:42:01 PDT
Comment on attachment 70278 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=70278&action=review r=me > WebCore/manual-tests/screen-availLeft.html:5 > + <script type="text/javascript" charset="utf-8"> Charset is useless for inline scripts. But it's fine to land as is to make sure it's not causing a crash somewhere. > WebCore/manual-tests/screen-availLeft.html:11 > + function log(s) > + { > + var output = document.getElementById('output'); > + output.innerHTML += s + "<br>"; > + } That's a lot of code for one lag() call.
Simon Fraser (smfr)
Comment 7 2010-10-12 14:06:59 PDT
Note You need to log in before you can comment on or make changes to this bug.