2010-10-08  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Alexey Proskuryakov.

        Screen.availLeft should be signed
        https://bugs.webkit.org/show_bug.cgi?id=34397

        For the screen to the left of the main screen, screen.availLeft
        can be negative, so the Screen API needs to use signed numbers
        for availLeft and availTop.

        * manual-tests/screen-availLeft.html: Added.
        * page/Screen.cpp:
        (WebCore::Screen::availLeft):
        (WebCore::Screen::availTop):
        * page/Screen.h:
        * page/Screen.idl:

Canonical link: https://commits.webkit.org/60193@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69599 268f45cc-cd09-0410-ab3c-d52691b4dbfc